zero-cost-templating/tests/ui/compile_fail/type_mismatch_because_missing_call.stderr
error[E0599]: no method named `test_page_title1` found for struct `Template<TestTemplate0, (), ()>` in the current scope
  --> tests/ui/compile_fail/type_mismatch_because_missing_call.rs:15:37
   |
10 | #[template_stream("test.html.hbs")]
   | ----------------------------------- method `test_page_title1` not found for this struct
...
15 |     let template = yields!(template.test_page_title1(page_title));
   |                                     ^^^^^^^^^^^^^^^^ method not found in `Template<TestTemplate0, (), ()>`
   |
   = note: the method was found for
           - `Template<TestTemplate1, Partial, After>`
